# rarephish

./: .gitignore  Assembly-CSharp.csproj  Cargo.toml  README.md  TilemapsYT.sln  rarephish.sln
Assets/: catchbutton.aseprite  fish_test.aseprite  mongolian-default.aseprite  tileset_default.aseprite
Assets/Fish/: fish_.prefab  fish_UIMG.prefab
Assets/Palette/: LavaAndWaterCave.prefab  mongolian sand.prefab
Assets/Scene/: automata level.unity  fish_generating.unity
Assets/Scripts/: CameraMove.cs  CameraScroll.cs  TileAutomata.cs  fish_costs.cs  fish_gen.cs  fisher.cs  unc_manager.cs  uncle_action.cs  uncle_spawn.cs  util.cs
Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF - Fallback.asset
Assets/Tiles/: tileset_default_0.asset  tileset_default_1.asset  tileset_default_2.asset
Assets/Uncles/Default/: Fishing.controller  fish_anim_default.anim  mongolian-default.aseprite  mongolian-default_0.prefab
Assets/scriptable_objects/: fishies.asset  uncmanage.asset
ProjectSettings/: ProjectSettings.asset  TagManager.asset
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt  default-2022.dwlt
src/: constants.rs  main.rs
