[package]
name = "rarephish"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
rand = "0.8"
rand_chacha = "0.3"

# Enable fast compiles on debug builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Release optimizations
[profile.release]
lto = "thin"
codegen-units = 1
